# gruid

./: CMakeLists.txt  LICENSE  README.md
include/: helloFrame.h
src/: helloFrame.c
